<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.viswakarma.jewelleryworks.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_create_order"
            app:destination="@id/navigation_create_order">
        </action>
        <action
            android:id="@+id/action_navigation_home_to_addCustomerFragment"
            app:destination="@id/addCustomerFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.viswakarma.jewelleryworks.view.fragment.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.viswakarma.jewelleryworks.view.fragment.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_create_order"
        android:name="com.viswakarma.jewelleryworks.view.fragment.CreateOrderFragment"
        android:label="@string/title_create_order"
        tools:layout="@layout/create_order_fragment" >
        <argument
            android:name="customerId"
            app:argType="string"
            android:defaultValue='' />
        <action
            android:id="@+id/action_navigation_create_order_to_transactionsFragment"
            app:destination="@id/transactionsFragment"
            app:popUpTo="@id/navigation_home"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_catalogue"
        android:name="com.viswakarma.jewelleryworks.view.fragment.CatalogueFragment"
        android:label="@string/title_catalogue"
        tools:layout="@layout/fragment_catalogue" />
    <fragment
        android:id="@+id/addCustomerFragment"
        android:name="com.viswakarma.jewelleryworks.AddCustomerFragment"
        android:label="@string/title_add_customer"
        tools:layout="@layout/add_customer_fragment" />
    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.viswakarma.jewelleryworks.TransactionsFragment"
        android:label="@string/title_transactions"
        tools:layout="@layout/transactions_fragment" >
        <action
            android:id="@+id/action_transactionsFragment_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>
