<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<!--    <item-->
<!--        android:id="@+id/action_settings"-->
<!--        android:icon="@drawable/ic_search"-->
<!--        android:title="@string/search"-->
<!--        app:showAsAction="always"/>-->

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:visible="false"
        tools:visible="true"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:visible="false"
        tools:visible="true"
        android:title="@string/title_add"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_baseline_done_24"
        android:visible="false"
        tools:visible="true"
        android:title="@string/done"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/action_call"
        android:visible="false"
        tools:visible="true"
        android:icon="@drawable/ic_baseline_call_24"
        android:title="@string/call"
        app:showAsAction="always|withText"/>


</menu>